--- a/app/src/main/res/drawable/drawable_image.xml
+++ b/app/src/main/res/drawable/drawable_image.xml
@@ -1,20 +1,3 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24.00dp" android:height="24.00dp" android:viewportWidth="24" android:viewportHeight="24">
-    <path android:fillColor="#FF000000" android:fillType="evenOdd" android:pathData="M6.33 8.35l0.6 7.17c0.04 0.55 0.5 0.97 1.05 0.97H18.9c0.52 0 0.97-0.4 1.04-0.9l0.95-6.57c0.03-0.15-0.01-0.3-0.1-0.43-0.1-0.13-0.24-0.21-0.4-0.24H6.33Zm1.64 9.64c-1.31 0-2.43-1.03-2.53-2.35L4.52 4.74 3.02 4.5C2.6 4.42 2.32 4.03 2.4 3.62c0.07-0.4 0.47-0.67 0.87-0.61l2.08 0.36C5.68 3.43 5.94 3.7 5.97 4.05l0.23 2.8c14.28 0 14.32 0.01 14.4 0.02 0.55 0.08 1.04 0.37 1.37 0.82 0.34 0.45 0.48 1 0.4 1.55l-0.95 6.56c-0.18 1.24-1.26 2.19-2.52 2.19H7.97Z"/>
-    <path android:fillColor="#FF000000" android:fillType="evenOdd" android:pathData="M17.29 12.04h-2.77c-0.42 0-0.75-0.33-0.75-0.75 0-0.41 0.33-0.75 0.75-0.75h2.77c0.41 0 0.75 0.34 0.75 0.75 0 0.42-0.34 0.75-0.75 0.75Z"/>
-    <path android:fillColor="#FF000000" android:fillType="evenOdd" android:pathData="M7.54 20.7c0.3 0 0.55 0.25 0.55 0.55 0 0.3-0.24 0.54-0.55 0.54-0.3 0-0.54-0.24-0.54-0.54 0-0.3 0.24-0.55 0.54-0.55Z"/>
-    <group>
-        <clip-path android:pathData="M7 21.25c0 0.3 0.24 0.54 0.55 0.54 0.3 0 0.54-0.24 0.54-0.54 0-0.3-0.24-0.55-0.54-0.55-0.3 0-0.55 0.24-0.55 0.55Z"/>
-        <group>
-            <path android:fillColor="#FF000000" android:fillType="evenOdd" android:pathData="M2 26.8h11.09V15.7H2v11.1Z"/>
-        </group>
-    </group>
-    <path android:fillColor="#FF000000" android:fillType="evenOdd" android:pathData="M7.54 21.04c-0.1 0-0.2 0.1-0.2 0.2 0 0.23 0.41 0.23 0.41 0 0-0.1-0.1-0.2-0.2-0.2Zm0 1.5c-0.71 0-1.29-0.58-1.29-1.3 0-0.7 0.58-1.29 1.3-1.29 0.7 0 1.29 0.58 1.29 1.3 0 0.71-0.58 1.3-1.3 1.3Z"/>
-    <path android:fillColor="#FF000000" android:fillType="evenOdd" android:pathData="M18.82 20.7c0.3 0 0.55 0.24 0.55 0.55 0 0.3-0.24 0.54-0.55 0.54-0.3 0-0.54-0.24-0.54-0.54 0-0.3 0.24-0.55 0.54-0.55Z"/>
-    <group>
-        <clip-path android:pathData="M18.28 21.25c0 0.3 0.24 0.54 0.54 0.54 0.3 0 0.55-0.24 0.55-0.54 0-0.3-0.25-0.55-0.55-0.55-0.3 0-0.54 0.24-0.54 0.55Z"/>
-        <group>
-            <path android:fillColor="#FF000000" android:fillType="evenOdd" android:pathData="M13.28 26.8h11.09V15.7H13.28v11.1Z"/>
-        </group>
-    </group>
-    <path android:fillColor="#FF000000" android:fillType="evenOdd" android:pathData="M18.82 21.04c-0.1 0-0.2 0.1-0.2 0.2 0 0.23 0.41 0.23 0.41 0 0-0.1-0.1-0.2-0.2-0.2Zm0 1.5c-0.71 0-1.29-0.58-1.29-1.3 0-0.7 0.58-1.29 1.3-1.29 0.7 0 1.29 0.58 1.29 1.3 0 0.71-0.58 1.3-1.3 1.3Z"/>
+    <path android:fillColor="#FF000000" android:pathData="M9.25 22l-0.4-3.2c-0.22-0.08-0.42-0.18-0.61-0.3-0.2-0.12-0.38-0.24-0.57-0.38L4.7 19.38l-2.75-4.75 2.57-1.94-0.02-0.34v-0.68c0-0.1 0-0.22 0.02-0.34L1.95 9.38 4.7 4.63l2.97 1.25C7.86 5.74 8.05 5.62 8.25 5.5c0.2-0.12 0.4-0.22 0.6-0.3L9.25 2h5.5l0.4 3.2c0.22 0.08 0.42 0.18 0.61 0.3 0.2 0.12 0.38 0.24 0.56 0.38l2.98-1.25 2.75 4.75-2.57 1.94 0.02 0.34v0.68c0 0.1-0.02 0.22-0.05 0.34l2.57 1.95-2.75 4.74-2.95-1.25c-0.18 0.14-0.37 0.26-0.57 0.38-0.2 0.12-0.4 0.22-0.6 0.3l-0.4 3.2h-5.5Zm2.8-6.5c0.97 0 1.8-0.34 2.47-1.03 0.69-0.68 1.03-1.5 1.03-2.47 0-0.97-0.34-1.8-1.03-2.47-0.68-0.69-1.5-1.03-2.47-1.03-0.98 0-1.81 0.34-2.49 1.03C8.9 10.2 8.55 11.03 8.55 12c0 0.97 0.34 1.8 1.01 2.47 0.68 0.69 1.5 1.03 2.49 1.03Z"/>
 </vector>
