--- a/app/src/main/res/drawable/image_rectangle2.xml
+++ b/app/src/main/res/drawable/image_rectangle2.xml
@@ -2,5 +2,11 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
   android:shape="rectangle">
-    <solid android:color="#0D242760" /><corners android:radius="6dp" />
+    <corners
+android:bottomLeftRadius="18dp"
+android:bottomRightRadius="18dp" /><gradient
+android:type="linear"
+android:angle="90"
+android:startColor="#FFFFFFFF"
+android:endColor="#00FFFFFF" />
 </shape>
