--- a/app/src/main/res/drawable/image_rectangle3.xml
+++ b/app/src/main/res/drawable/image_rectangle3.xml
@@ -1,3 +1,12 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="254.00dp" android:height="45.00dp" android:viewportWidth="254" android:viewportHeight="45">
-    <path android:strokeColor="#66000000" android:strokeWidth="1" android:pathData="M60 0h185.97c4.42 0 8 3.58 8 8v29c0 4.42-3.58 8-8 8H8c-4.42 0-8-3.58-8-8V8c0-4.42 3.58-8 8-8h5.91"/>
-</vector>
+<?xml version="1.0" encoding="utf-8"?>
+
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+  android:shape="rectangle">
+    <corners
+android:bottomLeftRadius="18dp"
+android:bottomRightRadius="18dp" /><gradient
+android:type="linear"
+android:angle="90"
+android:startColor="#FFFFFFFF"
+android:endColor="#00FFFFFF" />
+</shape>
