--- a/app/src/main/res/drawable/state_layer.xml
+++ b/app/src/main/res/drawable/state_layer.xml
@@ -1,6 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-<item>
-<color android:color="#33000000" />
-</item>
-</layer-list>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+  android:shape="rectangle">
+    <corners android:radius="28dp" /><gradient
+android:type="linear"
+android:angle="0"
+android:startColor="#B2FFFFFF"
+android:endColor="#B2FFFFFF" />
+</shape>
