--- a/app/src/main/res/drawable/container_group5.xml
+++ b/app/src/main/res/drawable/container_group5.xml
@@ -2,5 +2,5 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
   android:shape="rectangle">
-    <stroke android:width="1dp" android:color="#24544C4C" /><corners android:radius="6dp" />
+    <corners android:radius="6dp" />
 </shape>
