--- a/app/src/main/res/drawable/image_rectangle6.xml
+++ b/app/src/main/res/drawable/image_rectangle6.xml
@@ -2,11 +2,5 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
   android:shape="rectangle">
-    <corners
-android:bottomLeftRadius="18dp"
-android:bottomRightRadius="18dp" /><gradient
-android:type="linear"
-android:angle="90"
-android:startColor="#B2000000"
-android:endColor="#80808080" />
+    <stroke android:width="1dp" android:color="#24544C4C" /><corners android:radius="6dp" />
 </shape>
