--- a/app/src/main/res/drawable/blacklinehorizontal.xml
+++ b/app/src/main/res/drawable/blacklinehorizontal.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <size android:height="2dp"/> <!-- Set the thickness of the line -->
-    <solid android:color="#000000"/> <!-- Set the color to black -->
+    <size android:height="2dp"/>
+    <solid android:color="#000000"/>
 </shape>
