--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -16,7 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.111" />
+        app:layout_constraintVertical_bias="0.076" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -28,8 +28,10 @@
         android:layout_marginBottom="155dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.754"
         app:srcCompat="@drawable/image_view_rectanglesignup" />
 
     <Button
@@ -100,97 +102,95 @@
     </FrameLayout>
 
     <EditText
-        android:id="@+id/txtSUsername"
-        android:layout_width="246dp"
+        android:id="@+id/txtLUsername"
+        android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_marginTop="378dp"
-        android:layout_marginEnd="232dp"
-        android:layout_marginBottom="434dp"
-        android:background="@drawable/borderfortext"
-        app:layout_constraintBottom_toBottomOf="@+id/image_logo"
-        app:layout_constraintEnd_toEndOf="@+id/image_logo"
-        app:layout_constraintTop_toTopOf="@+id/image_logo"
-        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="130dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="270dp"
+        android:background="@drawable/image_view_rectangle1"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <EditText
         android:id="@+id/edtEmail"
-        android:layout_width="246dp"
+        android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_marginStart="86dp"
-        android:layout_marginTop="465dp"
-        android:layout_marginEnd="231dp"
-        android:layout_marginBottom="347dp"
-        android:background="@drawable/borderfortext"
-        app:layout_constraintBottom_toBottomOf="@+id/image_logo"
-        app:layout_constraintEnd_toEndOf="@+id/image_logo"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="220dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="180dp"
+        android:background="@drawable/image_view_rectangle1"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/image_logo"
-        app:layout_constraintTop_toTopOf="@+id/image_logo"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <EditText
-        android:id="@+id/txtSPassword"
-        android:layout_width="246dp"
+        android:id="@+id/txtLPassword"
+        android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_marginStart="86dp"
-        android:layout_marginTop="549dp"
-        android:layout_marginEnd="231dp"
-        android:layout_marginBottom="263dp"
-        android:background="@drawable/borderfortext"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="312dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="88dp"
+        android:background="@drawable/image_view_rectangle1"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="@+id/image_logo"
-        app:layout_constraintEnd_toEndOf="@+id/image_logo"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/image_logo"
-        app:layout_constraintTop_toTopOf="@+id/image_logo"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <EditText
         android:id="@+id/edtCPassword"
-        android:layout_width="247dp"
+        android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_marginStart="86dp"
-        android:layout_marginTop="627dp"
-        android:layout_marginEnd="231dp"
-        android:layout_marginBottom="185dp"
-        android:background="@drawable/borderfortext"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="396dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/image_view_rectangle2"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="@+id/image_logo"
-        app:layout_constraintEnd_toEndOf="@+id/image_logo"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/image_logo"
-        app:layout_constraintTop_toTopOf="@+id/image_logo"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/container_pass"
         android:layout_width="160dp"
         android:layout_height="24dp"
-        android:layout_marginStart="86dp"
-        android:layout_marginTop="599dp"
-        android:layout_marginEnd="351dp"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="607dp"
+        android:layout_marginEnd="119dp"
+        android:layout_marginBottom="34dp"
         android:gravity="center_horizontal|center_vertical"
         android:text="Confirm Password"
         android:textColor="#FF000000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/image_logo"
-        app:layout_constraintEnd_toEndOf="@+id/image_logo"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/image_logo"
-        app:layout_constraintTop_toTopOf="@+id/image_logo"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintBottom_toBottomOf="@+id/edtCPassword"
+        app:layout_constraintEnd_toEndOf="@+id/edtCPassword"
+        app:layout_constraintStart_toStartOf="@+id/edtCPassword"
+        app:layout_constraintTop_toTopOf="@+id/image_logo" />
 
     <TextView
         android:id="@+id/text_email"
-        android:layout_width="75dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="86dp"
-        android:layout_marginTop="435dp"
-        android:layout_marginEnd="403dp"
+        android:layout_width="51dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="209dp"
+        android:layout_marginEnd="425dp"
+        android:layout_marginBottom="388dp"
         android:alpha="0.800000011920929"
         android:gravity="left|center_vertical"
         android:text="Email"
@@ -198,43 +198,41 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/image_logo"
         app:layout_constraintEnd_toEndOf="@+id/image_logo"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/image_logo"
-        app:layout_constraintTop_toTopOf="@+id/image_logo"
-        app:layout_constraintVertical_bias="0.025" />
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/container_pass1"
         android:layout_width="93dp"
         android:layout_height="25dp"
-        android:layout_marginStart="86dp"
-        android:layout_marginTop="349dp"
-        android:layout_marginEnd="403dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="118dp"
+        android:layout_marginEnd="217dp"
+        android:layout_marginBottom="307dp"
         android:gravity="center_horizontal|center_vertical"
         android:text="Username"
         android:textColor="#FF000000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/image_logo"
-        app:layout_constraintEnd_toEndOf="@+id/image_logo"
-        app:layout_constraintHorizontal_bias="0.166"
-        app:layout_constraintStart_toStartOf="@+id/image_logo"
-        app:layout_constraintTop_toTopOf="@+id/image_logo"
-        app:layout_constraintVertical_bias="0.008" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="86dp"
         android:layout_height="23dp"
-        android:layout_marginStart="86dp"
-        android:layout_marginTop="522dp"
-        android:layout_marginEnd="415dp"
+        android:layout_marginStart="47dp"
+        android:layout_marginTop="299dp"
+        android:layout_marginEnd="217dp"
+        android:layout_marginBottom="128dp"
         android:text="Password"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/image_logo"
-        app:layout_constraintEnd_toEndOf="@+id/image_logo"
-        app:layout_constraintHorizontal_bias="0.13"
-        app:layout_constraintStart_toStartOf="@+id/image_logo"
-        app:layout_constraintTop_toTopOf="@+id/image_logo"
-        app:layout_constraintVertical_bias="0.013" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
