--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -8,81 +8,6 @@
     android:background="@drawable/drawable_shape">
 
     <ImageView
-        android:id="@+id/iv_home_page_rectangle3"
-        android:layout_width="390dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="761dp"
-        android:layout_marginBottom="38dp"
-        android:background="@drawable/iv_home_page_rectangle3"
-        android:scaleType="centerInside"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/iv_home_page_vector1"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="761dp"
-        android:layout_marginBottom="33dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/iv_home_page_vector1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/iv_home_page_vector2"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="761dp"
-        android:layout_marginBottom="33dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/iv_home_page_vector2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="311dp"
-        android:layout_marginTop="761dp"
-        android:layout_marginBottom="31dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/drawable_image"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/img_all_small_buy"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="240dp"
-        android:layout_marginTop="761dp"
-        android:layout_marginBottom="33dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/img_all_small_buy"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/container_group"
-        android:layout_width="59dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="167dp"
-        android:layout_marginTop="772dp"
-        android:layout_marginBottom="38dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/container_group"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
         android:id="@+id/iv_home_page_image"
         android:layout_width="390dp"
         android:layout_height="158dp"
@@ -157,5 +82,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
+        app:labelVisibilityMode="unlabeled"
+        app:layout_constraintBaseline_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nav" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
